--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,8 +15,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout 
         uses: actions/checkout@v2
-      - name: Test
+      - name: Do Test
         run: docker-compose run --rm app sh -c "python manage.py test"
-      - name: Lint
+      - name: DO Lint
         run: docker-compose run --rm app sh -c "flake8"
         
